--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mobi.omegacentauri.SendReduced"
-    android:versionCode="3"
-    android:versionName="0.03" >
+    android:versionCode="4"
+    android:versionName="0.04" >
 
     <uses-sdk android:minSdkVersion="4" />
      <supports-screens 
@@ -17,12 +17,17 @@
         <activity
             android:name="mobi.omegacentauri.SendReduced.SendReduced"
             android:label="Send Reduced" >
-            <intent-filter>
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <data android:mimeType="image/*" />
+                <data android:mimeType="image/*" />  
             </intent-filter>            
-             </activity>
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.SEND_MULTIPLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />  
+            </intent-filter>            
+            </activity>
         <activity
             android:name="mobi.omegacentauri.SendReduced.GetReduced"
             android:label="Get Reduced Photo" >
@@ -51,5 +56,4 @@
 		    
 		    />
 </application>
-    
 </manifest>
