--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="7"
     android:versionName="0.07" >
 
-    <uses-sdk android:minSdkVersion="5" />
+    <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="21" />
      <supports-screens 
          android:normalScreens="true"
          android:largeScreens="true"
