--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,18 +5,18 @@
     android:versionName="0.07" >
 
     <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="21" />
-     <supports-screens 
+     <supports-screens
          android:normalScreens="true"
          android:largeScreens="true"
          android:xlargeScreens="true"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-     	 
+
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <activity
             android:name="mobi.omegacentauri.SendReduced.SendReduced"
-            android:label="Send Reduced" >
+            android:label="Send Reduced Free" >
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
